[#3] - adiciona repository para lidar com chamdas de questoes

--- a/src/js/components/question-card/question-card.template.html
+++ b/src/js/components/question-card/question-card.template.html
@@ -1,5 +1,5 @@
 <div>
-    <h1 data-ng-bind="vc.question.text"></h1>
+    <h1 data-ng-bind="vc.vm.text"></h1>
     <ul>
         <li data-ng-repeat="number in [0,1,2,3,4,5]">
             <button data-ng-bind="number"></button>
