[#3] - Passa isLoading para o controller de question

--- a/src/js/components/question-card/question-card.template.html
+++ b/src/js/components/question-card/question-card.template.html
@@ -1,9 +1,9 @@
 <div>
-    <div data-ng-if="vc.vm.isLoading">
+    <div data-ng-if="vc.isLoading">
         <p>Carregando questões.</p>
     </div>
 
-    <div data-ng-if="!vc.vm.isLoading">
+    <div data-ng-if="!vc.isLoading">
         <h1 data-ng-bind="vc.vm.question.text"></h1>
 
         <ul>
