CLOSES #6 - adiciona tela inicial ao projeto

--- a/src/js/components/result-screen/result-screen.template.html
+++ b/src/js/components/result-screen/result-screen.template.html
@@ -6,4 +6,6 @@
         <span data-ng-bind="answer.result"></span>
     </div>
 
+    <p><a ui-sref="question({'questionId': 1})">Clique aqui para refazer o teste.</a></p>
+
 </div>
