--- a/src/js/components/result-screen/result-screen.template.html
+++ b/src/js/components/result-screen/result-screen.template.html
@@ -1,9 +1,9 @@
 <div>
     <h1>Acabou o teste. Resultados:</h1>
 
-    <div data-ng-repeat="answer in vc.answers">
-        <strong data-ng-bind="answer.longAlias"></strong>
-        <span data-ng-bind="answer.result"></span>
+    <div data-ng-repeat="(key,answer) in vc.answers">
+        <strong data-ng-bind="key"></strong>
+        <span data-ng-bind="answer"></span>
     </div>
 
     <p><a ui-sref="question({'questionId': 1})">Clique aqui para refazer o teste.</a></p>
