--- a/src/js/components/result-screen/result-screen.template.html
+++ b/src/js/components/result-screen/result-screen.template.html
@@ -3,7 +3,7 @@
 
     <div data-ng-repeat="(key,answer) in vc.answers">
         <strong data-ng-bind="key"></strong>
-        <span data-ng-bind="answer"></span>
+        <span data-ng-bind="answer.total"></span>
     </div>
 
     <p><a ui-sref="question({'questionId': 1})">Clique aqui para refazer o teste.</a></p>
